# UCW-Financial-predictor

./: .dockerignore  .gitignore  README.md  app.py  cloudbuild.yaml  financial_logic.py  package-lock.json  package.json  prompt_generator.py  turbo.json  workspace.json
.github/workflows/: ci-cd.yml
.turbo/daemon/: a7e71dcbe4b994d7-turbo.log.2025-07-06  a7e71dcbe4b994d7-turbo.log.2025-07-07  a7e71dcbe4b994d7-turbo.log.2025-07-11
Requirement-specifications/: technical-specifications.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/pages/: _app.tsx  index.tsx
apps/web/src/: router.tsx
apps/web/src/components/analysis/: FinancialPredictor.d.ts  FinancialPredictor.tsx
apps/web/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  SignUpForm.tsx
apps/web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Label.tsx  index.ts
apps/web/src/context/: AuthContext.tsx
apps/web/src/pages/: index.tsx  login.tsx  signup.tsx
apps/web/src/styles/: globals.css
apps/web/src/types/: common.ts
docs/: architectural-blueprint.md  frontend-design-specification.md  frontend-implementation-roadmap.md
infrastructure/docker/: docker-compose.dev.yml  docker-compose.yml
infrastructure/terraform/: cloud-run.tf  cost_optimization.tf  database.tf  iam.tf  main.tf  monitoring.tf  redis.tf  secrets.tf  storage.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
scripts/setup/: local-development.sh
