[tool.poetry]
name = "financial-predictor-api"
version = "1.0.0"
description = "FastAPI backend for Financial Predictor application"
authors = ["Financial Predictor Team <team@financialpredictor.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
celery = "^5.3.4"
openai = "^1.3.7"
requests = "^2.31.0"
httpx = "^0.25.2"
stripe = "^7.8.0"
sendgrid = "^6.10.0"
pandas = "^2.1.4"
numpy = "^1.25.2"
scikit-learn = "^1.3.2"
google-cloud-sql-connector = "^1.4.3"
google-cloud-secret-manager = "^2.17.0"
google-cloud-storage = "^2.10.0"
google-cloud-logging = "^3.8.0"
google-cloud-monitoring = "^2.16.0"
google-cloud-tasks = "^2.15.0"
google-cloud-pubsub = "^2.18.4"
google-cloud-aiplatform = "^1.38.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
bandit = "^1.7.5"
safety = "^2.3.5"
factory-boy = "^3.3.0"
httpx = "^0.25.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true